video 88 - Implementing Authorization filter.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ eureka.client.serviceUrl.defaultZone = http://localhost:8010/eureka
 api.h2console.url.path = /users-ws/h2-console/**
 api.registration.url.path = /users-ws/users
 api.login.url.path = /users-ws/users/login
+
+authorization.token.header.name = Authorization
+authorization.token.header.prefix = Bearer
+token.secret = hfgry463hf746hf573ydh475fhy5739
