--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ api.login.url.path = /users-ws/users/login
 authorization.token.header.name = Authorization
 authorization.token.header.prefix = Bearer
 token.secret = hfgry463hf746hf573ydh475fhy5739
+
+ribbon.ReadTimeout=60000
